Fix button alignment for CTA section

--- a/css/style.css
+++ b/css/style.css
@@ -430,7 +430,6 @@ img {
 .btn-secondary {
   background-color: #8B5E3C;
   color: #FFF8F0;
-  margin-left: 10px;
 }
 
 .btn-secondary:hover {
